--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     <ul>
                         <li><a href="/">About</a></li>
                         <li><a href="/updates">Updates</a></li>
-                        <li><a href="/mywork">My Work </a></li>
+                        <li><a href="/portfolio">Portfolio </a></li>
                         <li><a href="/printshop">Print Shop</a></li>
                         <li><a href="/cart">My Cart</a></li>
                     </ul>
@@ -180,7 +180,7 @@
             <ul>
                 <li><a href="/">About</a></li>
                 <li><a href="/updates">Updates</a></li>
-                <li><a href="/mywork">My Work</a></li>
+                <li><a href="/portfolio">Portfolio</a></li>
                 <li><a href="/printshop">Print Shop</a></li>
                 <li><a href="/cart"> <img src="/assets/icons/cart.svg" alt="Checkout cart - Go to my cart"></a></li>
             </ul>
@@ -229,10 +229,28 @@
 
 				<div class="divider d-flex"></div>
 
+				<!-- Additional Images (Default Screens) -->
+				<div class="content-element image-grid-layout non-mobile">
+					<div class="grid-item"><img src="assets/images/about/about_1.jpg"></div>
+					<div class="grid-item"><img src="assets/images/about/about_2.jpg"></div>
+					<div class="grid-item"><img src="assets/images/about/about_3.jpg"></div>
+				</div>
+
+				<!-- Additional Images (Mobile) -->
+				<div class="image-hscroller mobile-only">
+					<div class="scroll-wrapper">
+						<div class="hscroller-item"><img src="assets/images/about/about_1.jpg"></div>
+						<div class="hscroller-item"><img src="assets/images/about/about_2.jpg"></div>
+						<div class="hscroller-item"><img src="assets/images/about/about_3.jpg"></div>
+					</div>
+				</div>
+
+				<div class="divider d-flex"></div>
+
 				<!-- Artist -->
 				<section class="content-element text-block">
 					<h3 class="text-block-subheading">Artist</h3>
-					<p class="text-block-content">My approach is multidisciplinary and material-led – it does not fit neatly within a specialism. I start by exploring the properties of different mediums through experimentation, before gradually refining my process. My <a href="/printshop">Print Shop</a> demonstrates my go-to style, featuring organic shapes and negative space, but I rarely have an end-product in mind as I work. Examples of other pieces I’ve enjoyed making can be found in the <a href="/mywork">My Work</a> section, showing my broader range.</p>
+					<p class="text-block-content">My approach is multidisciplinary and material-led – it does not fit neatly within a specialism. I start by exploring the properties of different mediums through experimentation, before gradually refining my process. My <a href="/printshop">Print Shop</a> demonstrates my go-to style, featuring organic shapes and negative space, but I rarely have an end-product in mind as I work. Examples of other pieces I’ve enjoyed making can be found in the <a href="/portfolio">Portfolio</a> section, showing my broader range.</p>
 				</section>
 			
 				<div class="divider d-flex"></div>
@@ -273,7 +291,7 @@
             <ul>
                 <li><a href="/">About</a></li>
                 <li><a href="/updates">Updates</a></li>
-                <li><a href="/mywork">My Work</a></li>
+                <li><a href="/portfolio">Portfolio</a></li>
                 <li><a href="/printshop">Print Shop</a></li>
                 <li><a href="/contact">Contact</a></li>
             </ul>
