--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Izzy Sempill Art - Teaching has provided me with a broad range of creative skills and the opportunity to keep trying new techniques, always learning as I go.">
 	<meta name="keywords" content="Izzy Sempill, Sempill, Isabel Sempill, Art">
-    <link rel="canonical" href="https://izzysempill.com/mywork" />
+    <link rel="canonical" href="https://izzysempill.com/portfolio" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100..800&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="assets/css/main-6125fd82.css" />
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png">
     <script src="assets/js/main-3b0dd11b.js" defer></script>
-    <title>Izzy Sempill - My Work - Some pieces that I have enjoyed making in recent years</title>
+    <title>Izzy Sempill - Portfolio - Some pieces that I have enjoyed making in recent years</title>
 
     <style>
 
@@ -61,7 +61,7 @@
                     <ul>
                         <li><a href="/">About</a></li>
                         <li><a href="/updates">Updates</a></li>
-                        <li><a href="/mywork">My Work </a></li>
+                        <li><a href="/portfolio">Portfolio </a></li>
                         <li><a href="/printshop">Print Shop</a></li>
                         <li><a href="/cart">My Cart</a></li>
                     </ul>
@@ -92,7 +92,7 @@
             <ul>
                 <li><a href="/">About</a></li>
                 <li><a href="/updates">Updates</a></li>
-                <li><a href="/mywork">My Work</a></li>
+                <li><a href="/portfolio">Portfolio</a></li>
                 <li><a href="/printshop">Print Shop</a></li>
                 <li><a href="/cart"> <img src="/assets/icons/cart.svg" alt="Checkout cart - Go to my cart"></a></li>
             </ul>
@@ -122,13 +122,13 @@
             <div class="main-content-header parallax-scroll-off">
                 <div class="bg-image"></div>
                 <div class="main-content-title">
-                    <h1 class="m0">My Work</h1>
+                    <h1 class="m0">Portfolio</h1>
                 </div>
             </div>
 
 			<!-- Page Subheading -->
             <div class="main-content-subheading">
-                <h2 class="text-block-subheading">Example of My Work</h2>
+                <h2 class="text-block-subheading">Example of my work</h2>
             </div>
 
             <!-- Page Body -->
@@ -172,7 +172,7 @@
             <ul>
                 <li><a href="/">About</a></li>
                 <li><a href="/updates">Updates</a></li>
-                <li><a href="/mywork">My Work</a></li>
+                <li><a href="/portfolio">Portfolio</a></li>
                 <li><a href="/printshop">Print Shop</a></li>
                 <li><a href="/contact">Contact</a></li>
             </ul>
