--- a/updates.html
+++ b/updates.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Izzy Sempill Art - Updates on exhibitions, projects and work in progress">
 	<meta name="keywords" content="Izzy Sempill, Sempill, Isabel Sempill, Art">
-	<link rel="canonical" href="https://izzysempill.com/mywork" />
+	<link rel="canonical" href="https://izzysempill.com/updates" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100..800&display=swap" rel="stylesheet">
@@ -124,7 +124,7 @@
                     <ul>
                         <li><a href="/">About</a></li>
                         <li><a href="/updates">Updates</a></li>
-                        <li><a href="/mywork">My Work </a></li>
+                        <li><a href="/portfolio">Portfolio </a></li>
                         <li><a href="/printshop">Print Shop</a></li>
                         <li><a href="/cart">My Cart</a></li>
                     </ul>
@@ -155,7 +155,7 @@
             <ul>
                 <li><a href="/">About</a></li>
                 <li><a href="/updates">Updates</a></li>
-                <li><a href="/mywork">My Work</a></li>
+                <li><a href="/portfolio">Portfolio</a></li>
                 <li><a href="/printshop">Print Shop</a></li>
                 <li><a href="/cart"> <img src="/assets/icons/cart.svg" alt="Checkout cart - Go to my cart"></a></li>
             </ul>
@@ -195,6 +195,49 @@
             </div>
 
             <div class="main-content-body">
+
+				<!-- The Making Mill - Accordian -->
+				<section class="accordian">
+
+					<div class="header">
+						<img class="icon" src="assets/icons/chevron-down.svg" height="20">
+						<div class="title">Coming soon: collage workshop at The Making Mill</div>
+					</div>
+					<div class="content">
+
+						<!-- National Festival of Making -->
+						<div class="content-element text-block">
+							<p class="text-block-subheading">The Making Mill</p>     
+							<p class="text-block-subheading">1 November 2025</p>          
+
+							<p class="text-block-content">I am looking forward to running a creative collage session at The Making Mill in Hebden Bridge on Saturday 1 November, 10 - 12pm!</p>
+							<p class="text-block-content">All materials will be provided. This includes decorated papers and loads of second-hand books and magazines (full of photographic imagery of nature, travel, lifestyle, fashion, art and more) ready for you to cut up and transform!</p>
+							<p class="text-block-content">Collage is a playful process - you cannot plan what the end result will look like, which removes any pressure for your piece to be 'accurate' or look realistic. It's a fun introduction to art for those who are less confident, or a way for more experienced artists to experiment freely.</p>
+							<p class="text-block-content">Carve out some time to create in a relaxed and friendly environment with a chilled playlist and a brew.</p>
+							<p class="text-block-content">£15 per person. To book, please email: <a href="mailto:izzy.sempill.art@gmail.com">izzy.sempill.art@gmail.com</a></p>
+						</div>
+
+						<!-- Additional Images (Default Screens) -->
+						<div class="content-element image-grid-layout non-mobile">
+							<div class="grid-item"><img src="assets/images/exhibitions/the-making-mill/tmm_1.jpg"></div>
+							<div class="grid-item"><img src="assets/images/exhibitions/the-making-mill/tmm_2.jpg"></div>
+							<div class="grid-item"><img src="assets/images/exhibitions/the-making-mill/tmm_3.jpg"></div>
+						</div>
+
+						<!-- Additional Images (Mobile) -->
+						<div class="image-hscroller mobile-only">
+							<div class="scroll-wrapper">
+								<div class="hscroller-item"><img src="assets/images/exhibitions/the-making-mill/tmm_1.jpg"></div>
+								<div class="hscroller-item"><img src="assets/images/exhibitions/the-making-mill/tmm_2.jpg"></div>
+								<div class="hscroller-item"><img src="assets/images/exhibitions/the-making-mill/tmm_3.jpg"></div>
+							</div>
+						</div>
+
+					</div>
+
+				</section>
+
+				<div class="divider"></div>
 
 				<!-- National Festival of Making - Accordian -->
 				<section class="accordian">
@@ -552,7 +595,7 @@
             <ul>
                 <li><a href="/">About</a></li>
                 <li><a href="/updates">Updates</a></li>
-                <li><a href="/mywork">My Work</a></li>
+                <li><a href="/portfolio">Portfolio</a></li>
                 <li><a href="/printshop">Print Shop</a></li>
                 <li><a href="/contact">Contact</a></li>
             </ul>
