--- a/printshop.html
+++ b/printshop.html
@@ -100,7 +100,7 @@
                     <ul>
                         <li><a href="/">About</a></li>
                         <li><a href="/updates">Updates</a></li>
-                        <li><a href="/mywork">My Work </a></li>
+                        <li><a href="/portfolio">Portfolio </a></li>
                         <li><a href="/printshop">Print Shop</a></li>
                         <li><a href="/cart">My Cart</a></li>
                     </ul>
@@ -131,7 +131,7 @@
             <ul>
                 <li><a href="/">About</a></li>
                 <li><a href="/updates">Updates</a></li>
-                <li><a href="/mywork">My Work</a></li>
+                <li><a href="/portfolio">Portfolio</a></li>
                 <li><a href="/printshop">Print Shop</a></li>
                 <li><a href="/cart"> <img src="/assets/icons/cart.svg" alt="Checkout cart - Go to my cart"></a></li>
             </ul>
@@ -567,7 +567,7 @@
             <ul>
                 <li><a href="/">About</a></li>
                 <li><a href="/updates">Updates</a></li>
-                <li><a href="/mywork">My Work</a></li>
+                <li><a href="/portfolio">Portfolio</a></li>
                 <li><a href="/printshop">Print Shop</a></li>
                 <li><a href="/contact">Contact</a></li>
             </ul>
