--- a/product/green-and-orange.html
+++ b/product/green-and-orange.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Give+You+Glory&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../assets/css/main-6125fd82.css" />
+    <link rel="stylesheet" href="../assets/css/main-96f08ca9.css" />
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png">
     <script src="/assets/js/main-3b0dd11b.js"></script>
     <title>Izzy Sempill</title>
@@ -233,9 +233,6 @@
 
                 <div class="nav-layout">
                     <ul>
-                        <li><a href="/">About</a></li>
-                        <li><a href="/updates">Updates</a></li>
-                        <li><a href="/portfolio">Portfolio </a></li>
                         <li><a href="/printshop">Print Shop</a></li>
                         <li><a href="/cart">My Cart</a></li>
                     </ul>
@@ -264,9 +261,6 @@
     
         <div class="nav-layout">
             <ul>
-                <li><a href="/">About</a></li>
-                <li><a href="/updates">Updates</a></li>
-                <li><a href="/portfolio">Portfolio</a></li>
                 <li><a href="/printshop">Print Shop</a></li>
                 <li><a href="/cart"> <img src="/assets/icons/cart.svg" alt="Checkout cart - Go to my cart"></a></li>
             </ul>
@@ -444,14 +438,8 @@
 
         <span class="logo logo-font logo-font-white">Izzy Sempill</span>
         <div class="nav nav-layout">
-            <ul>
-                <li><a href="/">About</a></li>
-                <li><a href="/updates">Updates</a></li>
-                <li><a href="/portfolio">Portfolio</a></li>
-                <li><a href="/printshop">Print Shop</a></li>
-                <li><a href="/contact">Contact</a></li>
-            </ul>
             <span class="d-block mt-20">&copy; 2025 Izzy Sempill</span>
+            <span class="d-block">All rights reserved</span>
         </div>
 
     </div>
