--- a/printshop.html
+++ b/printshop.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="A3 and A4 prints of collages, life drawings, and mixed media peices. All on high quality inkjet print on 230gsm Pinnacle matte paper and with Free UK delivery.">
 	<meta name="keywords" content="Izzy Sempill, Sempill, Isabel Sempill, Art">
-    <link rel="canonical" href="https://izzysempill.com/printshop" />
+    <link rel="canonical" href="https://shop.izzysempill.com/printshop" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Give+You+Glory&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/main-96f08ca9.css" />
+    <link rel="stylesheet" href="assets/css/main-298fdae6.css" />
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png">
-    <script src="assets/js/main-3b0dd11b.js" defer></script>
+    <script src="assets/js/main-0676cb2b.js" defer></script>
     <title>Izzy Sempill - Print Shop - Purchase A3 and A4 prints of collages, life drawings, and mixed media peices</title>
 
     <style>
@@ -120,14 +120,18 @@
     <!-- Standard Content -->
     <div class="content-wrapper non-mobile">
 
-        <span class="logo logo-font" onclick="window.location=window.location.origin">
+        <!--<span class="logo logo-font" onclick="window.location=window.location.origin">
             Izzy Sempill
-        </span>
-    
-        <div class="nav-layout">
+        </span>--> 
+		<a onclick="window.location=window.location.origin">
+			<img style="display: inline-block; max-height: 56px; max-width: 225px; padding: 8px 4px 8px 12px; vertical-align: middle; box-sizing: border-box;" src="/assets/images/logo.png">
+		</a>
+		
+
+        <div class="nav-layout" style="vertical-align: middle; align-content: center;">
             <ul>
-                <li><a href="/printshop">Print Shop</a></li>
-                <li><a href="/cart"> <img src="/assets/icons/cart.svg" alt="Checkout cart - Go to my cart"></a></li>
+                <li style="line-height: 28px;"><a href="/printshop">Print Shop</a></li>
+                <li style="line-height: 28px;"><a href="/cart"> <img src="/assets/icons/cart.svg" alt="Checkout cart - Go to my cart"></a></li>
             </ul>
         </div>
 
@@ -137,12 +141,13 @@
     <!-- Standard Content -->
     <div class="content-wrapper mobile-only">
         <div class="mobile-options">
-            <span class="burger-menu" onclick="openSidebar()">
+            <span class="burger-menu" style="vertical-align: middle; align-content: center;" onclick="openSidebar()">
                 <img src="/assets/icons/burger-menu.svg" height="24" alt="A burger menu - 3 horizontal lines on top of one another">
             </span>
-            <span class="logo logo-font" onclick="window.location=window.location.origin">
+            <!--<span class="logo logo-font" onclick="window.location=window.location.origin">
                 Izzy Sempill
-            </span>    
+            </span>-->    
+			<img style="display: inline-block; max-height: 56px; max-width: 225px; padding: 8px 4px 8px 12px; vertical-align: middle; box-sizing: border-box;" src="/assets/images/logo.png">
         </div>
     </div>
 
