--- a/cart.html
+++ b/cart.html
@@ -6,14 +6,14 @@
 	<meta name="description" content="Izzy Sempill Art - Cart">
 	<meta name="keywords" content="Izzy Sempill, Sempill, Isabel Sempill, Art">
 	<meta name="robots" content="noindex, nofollow">
-    <link rel="canonical" href="https://izzysempill.com/cart" />
+    <link rel="canonical" href="https://shop.izzysempill.com/cart" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Give+You+Glory&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../assets/css/main-96f08ca9.css" />
+    <link rel="stylesheet" href="../assets/css/main-298fdae6.css" />
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png">
-    <script src="/assets/js/main-3b0dd11b.js"></script>
+    <script src="/assets/js/main-0676cb2b.js"></script>
     <script src="https://js.stripe.com/v3"></script>
     <title>Izzy Sempill - Cart</title>
 
@@ -232,14 +232,18 @@
     <!-- Standard Content -->
     <div class="content-wrapper non-mobile">
 
-        <span class="logo logo-font" onclick="window.location=window.location.origin">
+        <!--<span class="logo logo-font" onclick="window.location=window.location.origin">
             Izzy Sempill
-        </span>
-    
-        <div class="nav-layout">
+        </span>--> 
+		<a onclick="window.location=window.location.origin">
+			<img style="display: inline-block; max-height: 56px; max-width: 225px; padding: 8px 4px 8px 12px; vertical-align: middle; box-sizing: border-box;" src="/assets/images/logo.png">
+		</a>
+		
+
+        <div class="nav-layout" style="vertical-align: middle; align-content: center;">
             <ul>
-                <li><a href="/printshop">Print Shop</a></li>
-                <li><a href="/cart"> <img src="/assets/icons/cart.svg" alt="Checkout cart - Go to my cart"></a></li>
+                <li style="line-height: 28px;"><a href="/printshop">Print Shop</a></li>
+                <li style="line-height: 28px;"><a href="/cart"> <img src="/assets/icons/cart.svg" alt="Checkout cart - Go to my cart"></a></li>
             </ul>
         </div>
 
@@ -249,12 +253,13 @@
     <!-- Standard Content -->
     <div class="content-wrapper mobile-only">
         <div class="mobile-options">
-            <span class="burger-menu" onclick="openSidebar()">
+            <span class="burger-menu" style="vertical-align: middle; align-content: center;" onclick="openSidebar()">
                 <img src="/assets/icons/burger-menu.svg" height="24" alt="A burger menu - 3 horizontal lines on top of one another">
             </span>
-            <span class="logo logo-font" onclick="window.location=window.location.origin">
+            <!--<span class="logo logo-font" onclick="window.location=window.location.origin">
                 Izzy Sempill
-            </span>    
+            </span>-->    
+			<img style="display: inline-block; max-height: 56px; max-width: 225px; padding: 8px 4px 8px 12px; vertical-align: middle; box-sizing: border-box;" src="/assets/images/logo.png">
         </div>
     </div>
 
