Update Home Link

--- a/cart.html
+++ b/cart.html
@@ -232,10 +232,7 @@
     <!-- Standard Content -->
     <div class="content-wrapper non-mobile">
 
-        <!--<span class="logo logo-font" onclick="window.location=window.location.origin">
-            Izzy Sempill
-        </span>--> 
-		<a onclick="window.location=window.location.origin">
+		<a onclick="window.location=window.location.origin + '/printshop'">
 			<img style="display: inline-block; max-height: 56px; max-width: 225px; padding: 8px 4px 8px 12px; vertical-align: middle; box-sizing: border-box;" src="/assets/images/logo.png">
 		</a>
 		
@@ -255,10 +252,7 @@
         <div class="mobile-options">
             <span class="burger-menu" style="vertical-align: middle; align-content: center;" onclick="openSidebar()">
                 <img src="/assets/icons/burger-menu.svg" height="24" alt="A burger menu - 3 horizontal lines on top of one another">
-            </span>
-            <!--<span class="logo logo-font" onclick="window.location=window.location.origin">
-                Izzy Sempill
-            </span>-->    
+            </span>  
 			<img style="display: inline-block; max-height: 56px; max-width: 225px; padding: 8px 4px 8px 12px; vertical-align: middle; box-sizing: border-box;" src="/assets/images/logo.png">
         </div>
     </div>
